<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/operand_one_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/masukkan_nilai"
        android:inputType="numberDecimal"/>

    <EditText
        android:id="@+id/operand_two_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/masukkan_nilai2"
        android:inputType="numberDecimal"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/operation_add_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onAdd"
            android:text="@string/add"/>

        <Button
            android:id="@+id/operation_sub_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_toEndOf="@id/operation_add_btn"
            android:layout_toRightOf="@id/operation_add_btn"
            android:onClick="onSub"
            android:text="@string/sub" />

        <Button
            android:id="@+id/operation_div_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/operation_add_btn"
            android:onClick="onDiv"
            android:text="@string/div"/>

        <Button
            android:id="@+id/operation_mul_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/operation_add_btn"
            android:layout_toEndOf="@id/operation_add_btn"
            android:layout_toRightOf="@id/operation_add_btn"
            android:onClick="onMul"
            android:layout_marginLeft="15dp"
            android:text="@string/mul"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/operation_result_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>